{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 57,
  "lineage": "736979ec-af9e-cc89-f3ad-34fc3b4c049c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "itsm-server-dev-lb-access-logs",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:255847211468:loadbalancer/app/itsm-server-dev/f6f7a59203208535",
            "arn_suffix": "app/itsm-server-dev/f6f7a59203208535",
            "dns_name": "itsm-server-dev-672657831.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:255847211468:loadbalancer/app/itsm-server-dev/f6f7a59203208535",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "itsm-server-dev",
            "security_groups": [
              "sg-0ac5daf49ac9b66fd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0946d3f99953ac98a"
              },
              {
                "subnet_id": "subnet-0dde81d9e5468eb5d"
              }
            ],
            "subnets": [
              "subnet-0946d3f99953ac98a",
              "subnet-0dde81d9e5468eb5d"
            ],
            "tags": {
              "application": "itsm-server",
              "environment": "dev"
            },
            "vpc_id": "vpc-0b3c769c8c579098f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.lb_access_logs",
            "aws_security_group.nsg_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:255847211468:listener/app/itsm-server-dev/f6f7a59203208535/195e085c3d4b1acc",
            "certificate_arn": "arn:aws:acm:us-east-1:255847211468:certificate/138a68a9-768a-4b7c-ad6a-97668ea2a84c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:255847211468:targetgroup/itsm-server-dev/b9ad35726031e7bf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:255847211468:listener/app/itsm-server-dev/f6f7a59203208535/195e085c3d4b1acc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:255847211468:loadbalancer/app/itsm-server-dev/f6f7a59203208535",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_acm_certificate_validation.cert",
            "aws_alb.main",
            "aws_alb_target_group.main",
            "aws_s3_bucket.lb_access_logs",
            "aws_security_group.nsg_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:255847211468:targetgroup/itsm-server-dev/b9ad35726031e7bf",
            "arn_suffix": "targetgroup/itsm-server-dev/b9ad35726031e7bf",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:255847211468:targetgroup/itsm-server-dev/b9ad35726031e7bf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "itsm-server-dev",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "application": "itsm-server",
              "environment": "dev"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0b3c769c8c579098f"
          },
          "dependencies": [
            "aws_alb.main",
            "aws_s3_bucket.lb_access_logs",
            "aws_security_group.nsg_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nsg_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255847211468:security-group/sg-0ac5daf49ac9b66fd",
            "description": "Allow connections from external resources while limiting connections from itsm-server-dev-lb to internal resources",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Only allow SG itsm-server-dev-lb to connect to itsm-server-dev-task on port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e921122ff97e5520"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "id": "sg-0ac5daf49ac9b66fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "itsm-server-dev-lb",
            "name_prefix": null,
            "owner_id": "255847211468",
            "revoke_rules_on_delete": false,
            "tags": {
              "application": "itsm-server",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3c769c8c579098f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nsg_task",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255847211468:security-group/sg-0e921122ff97e5520",
            "description": "Limit connections from internal resources while allowing itsm-server-dev-task to connect to all external resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows task to establish connections to all resources",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e921122ff97e5520",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Only allow connections from SG itsm-server-dev-lb on port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ac5daf49ac9b66fd"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "itsm-server-dev-task",
            "name_prefix": null,
            "owner_id": "255847211468",
            "revoke_rules_on_delete": false,
            "tags": {
              "application": "itsm-server",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3c769c8c579098f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_lb_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1109999522",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ac5daf49ac9b66fd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nsg_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nsg_lb_egress_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Only allow SG itsm-server-dev-lb to connect to itsm-server-dev-task on port 3000",
            "from_port": 3000,
            "id": "sgrule-854214500",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ac5daf49ac9b66fd",
            "self": false,
            "source_security_group_id": "sg-0e921122ff97e5520",
            "to_port": 3000,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.nsg_lb",
            "aws_security_group.nsg_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nsg_task_egress_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allows task to establish connections to all resources",
            "from_port": 0,
            "id": "sgrule-2205540995",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e921122ff97e5520",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.nsg_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nsg_task_ingress_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Only allow connections from SG itsm-server-dev-lb on port 3000",
            "from_port": 3000,
            "id": "sgrule-1423143846",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e921122ff97e5520",
            "self": false,
            "source_security_group_id": "sg-0ac5daf49ac9b66fd",
            "to_port": 3000,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nsg_lb",
            "aws_security_group.nsg_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow Fargate Task to access RDS",
            "from_port": 3306,
            "id": "sgrule-42033748",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f1cb02cbc29de70e",
            "self": false,
            "source_security_group_id": "sg-0e921122ff97e5520",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nsg_task"
          ]
        }
      ]
    }
  ]
}